--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 table {
     border-collapse: collapse;
-    border: 2px solid rgb(140 140 140);
+    /* border: 2px solid rgb(140 140 140); */
     font-family: sans-serif;
     font-size: 0.8rem;
     letter-spacing: 1px;
@@ -19,7 +19,7 @@ table {
   
   th,
   td {
-    border: 1px solid rgb(160 160 160);
+    /* border: 1px solid rgb(160 160 160); */
     padding: 8px 10px;
   }
   
@@ -41,4 +41,13 @@ table {
 
   img {
     border-radius: 50%;
+    width: 400px; 
+    height: 400px;
+  }
+
+  hr {
+    background-color: aqua;
+    border-style: dotted;
+    height: 2px;
+    width: 30%;
   }
